web/styles/zulip.css
/* ... */
.stream_label {
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 5px 2px 5px 10px;
    height: 17px;
    line-height: 17px;
    position: relative;
    top: 0.5px;
    text-decoration: none;
    font-weight: 600;

    .recipient-row-stream-icon {
        font-size: 12px;
        line-height: 12px;
    }

    .zulip-icon.zulip-icon-globe {
        position: relative;
        top: 1px;
    }

    &:hover {
        text-decoration: none;
    }

    .stream-privacy {
        min-width: unset;
        width: 16px;
        height: 16px;

        .hashtag {
            padding-right: 0;

            &::after {
                font-size: 16px;
            }
        }
    }
}

.recipient_bar_controls {
    display: flex;
    flex-grow: 1;
    align-items: center;
}

.recipient_row_date {
    color: var(--color-date);
    font-size: calc(12em / 14);
    padding: 0 10px;
    text-align: right;
    display: flex;
    align-items: center;
    font-style: normal;
    font-weight: 600;
    line-height: 17px; /* identical to box height, or 131% */
    letter-spacing: 0.04em;
    text-transform: uppercase;
    padding-top: 1px;

    /* Display the date when unchanged only for sticky headers. */
    &.recipient_row_date_unchanged {
        display: none;

        .sticky_header & {
            display: block;
        }
    }

    &.hide-date-separator-header {
        display: none;
    }
}

.recipient_bar_icon {
    color: var(--color-message-header-icon-interactive);
    opacity: 0.2;
    padding-left: 6px;
    padding-right: 6px;

    &:hover {
        opacity: 0.4 !important;
    }
}

#mark_as_read_turned_off_banner {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 8px 8px 8px 14px;
    column-gap: 10px;

    #mark_as_read_turned_off_content {
        margin: 0;
        flex-grow: 1;
    }

    #mark_as_read_controls {
        display: flex;
    }

    #mark_as_read_close {
        align-self: flex-start;
        margin-top: -5px;
        /* override bootstrap */
        top: 0;
        right: 0;
        position: static;
    }
}

.copy-paste-text {
    /* Hide the text that we want copy paste to capture */
    position: absolute;
    text-indent: -99999px;
    float: left;
    width: 0;
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(359deg);
    }
}

@keyframes fadeInMessage {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes fadeInEditNotice {
    0% {
        transform: translateX(-10px);
    }

    100% {
        transform: translateX(0);
    }
}

.message_header_private_message {
    /* This is required for box-shadow appear above the message content. */
    z-index: 1;
    box-shadow: -1px -5px 0 5px var(--color-background),
        1px -5px 0 0 var(--color-background);
    background-color: var(--color-background);

    .message-header-contents {
        background-color: var(--color-background-private-message-header);
    }

    .message_label_clickable {
        display: flex;
        padding: 5px 0 5px 10px;
        font-weight: 600;
        height: 17px;
        line-height: 17px;
        color: var(--color-text-message-header);

        &:hover {
            color: var(--color-text-message-header) !important;
            text-decoration: none;
        }

        .private_message_header_icon {
            font-size: 15px;
            position: relative;
            top: 1px;
            width: 16px;
            height: 16px;
        }
    }
}

.private-message {
    .alert-msg {
        background-color: hsl(192deg 20% 95%);
    }

    .messagebox,
    .date_row {
        background-color: var(--color-background-private-message-content);
    }
}

.group_mention .messagebox,
.direct_mention .messagebox {
    background-color: hsl(8deg 94% 94%);
}

.recipient_row .message_row:first-child .unread_marker {
    top: 0;
}

.unread_marker {
    display: block;
    position: absolute;
    height: 100%;
    top: 0;
    opacity: 0;
    z-index: 2;
    bottom: 1px;
    transition: all 0.3s ease-out;

    &.slow_fade {
        transition: all 2s ease-out;
    }

    &.fast_fade {
        transition: all 0.3s ease-out;
    }
}

.unread-marker-fill {
    background-color: hsl(107deg 74% 29%);
    width: 2px;
    height: 100%;
}

.unread .unread_marker {
    transition: all 0.3s ease-out;
    opacity: 1;
}

.selected_message {
    .messagebox-content {
        outline: 1px solid hsl(217deg 64% 59% / 60%);
        border-radius: 5px;
        outline-offset: -1px;
    }
}

.message_sender {
    & i.zulip-icon.zulip-icon-bot {
        font-size: 12px;
    }
}

.sender_name {
    display: inline-block;
    font-weight: 700;
}

.sender_name-in-status {
    margin-right: 3px;
    font-weight: 700;
}

.sender_name_hovered {
    .sender_name,
    .sender_name-in-status {
        color: hsl(200deg 100% 40%);
    }
}

.actions_hover:hover {
    color: hsl(200deg 100% 40%);
}

.always_visible_topic_edit,
.on_hover_topic_read,
.on_hover_topic_unmute {
    opacity: 0.7;

    &:hover {
        cursor: pointer;
        opacity: 1;
    }
}

.on_hover_topic_edit,
.on_hover_topic_unresolve,
.on_hover_topic_resolve,
.on_hover_topic_mute {
    opacity: 0.2;

    &:hover {
        cursor: pointer;
        opacity: 0.7;
    }
}

/* Make the action icon on the message row
   always visible while the popover is open */
.has_actions_popover .actions_hover {
    visibility: visible !important;
    pointer-events: all !important;
    opacity: 1 !important;

    & i:focus {
        /* Avoid displaying a focus outline outside the popover on the \vdots
           icon when opened via the mouse. */
        outline: 0 !important;
    }
}

.has_actions_popover .info {
    opacity: 1;
    visibility: visible;
}

.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}
/* ... */

