recipient_bar: Stop stream name from overflowing.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -1218,6 +1218,7 @@ td.pointer {
     top: 0.5px;
     text-decoration: none;
     font-weight: 600;
+    overflow: hidden;
 
     .recipient-row-stream-icon {
         font-size: 12px;
